--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_USER_LOGIN=http://127.0.0.1:8000/api/login
-VITE_REGISTER_URL=http://127.0.0.1:8000/api/register
-VITE_PROFILE_IMAGE=http://127.0.0.1:8000/api/update-profile
-VITE_PROFILE_FETCH_URL=http://127.0.0.1:8000/api/get-profile
-VITE_API_URL=http://localhost:8000
+VITE_USER_LOGIN=https://lbbackend.onrender.com/api/login
+VITE_REGISTER_URL=https://lbbackend.onrender.com/api/register
+VITE_PROFILE_IMAGE=https://lbbackend.onrender.com/api/update-profile
+VITE_PROFILE_FETCH_URL=https://lbbackend.onrender.com/api/get-profile
+VITE_API_URL=https://lbbackend.onrender.com
